--- a/packages/app/Dockerfile
+++ b/packages/app/Dockerfile
@@ -1,22 +1,30 @@
 FROM python:3.10-slim
 
+# Install necessary packages and create the tessdata directory
 RUN apt-get update && apt-get install -y \
     tesseract-ocr \
     libtesseract-dev \
     libleptonica-dev \
     libgl1 \
     libglib2.0-0 \
+    wget \
+    && mkdir -p /usr/share/tesseract-ocr/4.00/tessdata/ \
+    && wget https://github.com/tesseract-ocr/tessdata/raw/main/eng.traineddata -P /usr/share/tesseract-ocr/4.00/tessdata/ \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
+# Set working directory
 WORKDIR /usr/src/app
 
-
+# Copy requirements and install Python dependencies
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
+# Copy the rest of the application code
 COPY . .
 
+# Set Tesseract data path environment variable
 ENV TESSDATA_PREFIX=/usr/share/tesseract-ocr/4.00/tessdata/
 
+# Run the app
 CMD ["python", "app.py"]
