--- a/chrome_extention/manifest.json
+++ b/chrome_extention/manifest.json
@@ -1,14 +1,9 @@
 {
-    "manifest_version": 3,
-    "name": "Receipt AutoFill",
-    "version": "1.0",
-    "permissions": ["storage", "tabs", "scripting"],
-    "host_permissions": ["https://www.ros.ie/*"],
-    "background": {
-      "service_worker": "background.js"
-    },
-    "action": {
-      "default_popup": "popup.html"
-    }
+  "manifest_version": 3,
+  "name": "Image Uploader",
+  "version": "1.0",
+  "permissions": ["activeTab", "storage", "fileSystem"],
+  "action": {
+    "default_popup": "popup.html"
   }
-  
+}
